# Convert

./: .env.example  .gitignore  DIRECTORY_MAP.md  README.md  SCALABILITY_ROADMAP.md  app.py  cli.py  commands.py  convert_pptx.py  dashboard.py  install.sh  main.py  manual_run.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  transcribe.py  tui.py
config/: settings.json
core/: capabilities.py  dispatcher.py  doctor.py  selftest.py
docs/: SETUP.md  STRUCTURE.md
engines/: archive.py  audio_video.py  data.py  documents.py  images.py  models3d.py  ocr.py  pdf_edit.py  subtitles.py
engines/js/: package.json
output/srt/: Transcript_Week_1.srt  Transcript_Week_2.srt  Transcript_Week_3.srt  Transcript_Week_4.srt  Transcript_Week_5.srt
output/txt/: Transcript_Week_1.txt  Transcript_Week_2.txt  Transcript_Week_3.txt  Transcript_Week_4.txt  Transcript_Week_5.txt
src/: __init__.py  config.py
src/api/: __init__.py
src/services/: __init__.py
src/transcripe/: cli.py  commands.py  tui.py
src/transcripe/core/: capabilities.py  dispatcher.py  doctor.py  selftest.py  text_utils.py
src/transcripe/engines/: audio_video.py  documents.py  images.py  models3d.py  pdf_edit.py  subtitles.py
src/transcripe/engines/js/: import_model.js
src/utils/: __init__.py
tests/: conftest.py  test_archives_encoding.py  test_capabilities.py  test_conversions.py  test_data_quality.py  test_models3d.py
transcripe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
