[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "transcripe"
version = "2.0.0"
description = "Universal semantic file converter, PDF editor, merger & transcriber — 100% local"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Abdulrahman Alabed" }]
keywords = ["converter", "pdf", "ocr", "whisper", "transcription", "ffmpeg", "cli", "tui"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]

# Lean core: CLI/TUI + pure-python features (subtitles, encoding repair,
# zip/tar archives). Everything else is capability-gated — install extras
# for the features you need; `transcripe --doctor` shows what's active.
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "pyfiglet>=1.0.0",
    "textual>=0.60.0",
    "charset-normalizer>=3.0.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
whisper = ["faster-whisper>=1.0.0"]
ocr = ["rapidocr-onnxruntime>=1.3.0", "onnxruntime>=1.16.0", "easyocr>=1.7.0"]
pdf = ["pdf2image>=1.16.0", "PyMuPDF>=1.24.0", "pdf2docx>=0.5.8", "ocrmypdf>=16.0.0"]
docs = ["pypandoc>=1.13", "weasyprint>=60.0"]
images = ["Pillow>=10.0.0", "pillow-heif>=0.16.0"]
data = ["pandas>=2.0.0", "openpyxl>=3.1.0", "pyyaml>=6.0.0", "pyarrow>=15.0.0"]
archives = ["py7zr>=0.20.0", "rarfile>=4.0"]
threed = ["trimesh>=4.0.0"]
all = [
    "transcripe[whisper,ocr,pdf,docs,images,data,archives,threed]",
]

[project.scripts]
transcripe = "transcripe.cli:main_entry"

[project.urls]
Repository = "https://github.com/abdulrahmanJAlabbed/Convert"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"transcripe.engines" = ["js/package.json", "js/*.js"]
